--- a/Week-12/2-August-2024/speech/stopwords.ipynb
+++ b/Week-12/2-August-2024/speech/stopwords.ipynb
@@ -305,10 +305,11 @@
     }
    ],
    "source": [
+    "from curses import window\n",
     "from gensim.models import Word2Vec\n",
     "\n",
     "# Initialize Word2Vec model\n",
-    "model = Word2Vec(vector_size=5, workers=5, sg=0)\n",
+    "model = Word2Vec(vector_size=5, workers=5, window = 5, min_count = 1,  sg=0)\n",
     "\n",
     "# Build the vocabulary\n",
     "model.build_vocab(s)\n",
